# pwexec

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  pwexec.c
